# mskey-web

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  input.css  justfile  package-lock.json  package.json  tailwind.config.js
bink_types/: Cargo.toml
bink_types/src/: bink.rs  keys.rs  lib.rs
src/: crypto.rs  gen.rs  icons.rs  main.rs
src-tauri/: tauri.conf.json
src/components/: bink1998_details.rs  bink2002_details.rs  button.rs  error.rs  fields.rs  mod.rs
src/pages/: activate.rs  generate.rs  mod.rs  validate.rs
