[package]
name = "mskey-web"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["bink_types"]

[dependencies]
anyhow = "1.0.91"
bincode = "1.3.3"
bink_types = { path = "bink_types" }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.10", features = ["js"] }
leptos = { version = "0.6.15", features = ["csr"] }
umskt = { git = "https://github.com/anpage/umskt-rs.git" }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.45"

[dependencies.web-sys]
version = "0.3.72"
features = [
  'Clipboard',
  'History',
  'Location',
  'Navigator',
  'Url',
  'UrlSearchParams',
  'Window',
]

[build-dependencies]
bincode = "1.3.3"
bink_types = { path = "bink_types" }
num-bigint = {version = "0.4.6", features = ["serde"] }
num-traits = "0.2.15"
serde_json = "1.0.132"

[profile.release]
strip = true
